--- a/src/com/github/view/viewProfile.fxml
+++ b/src/com/github/view/viewProfile.fxml
@@ -15,7 +15,7 @@
    <content>
       <AnchorPane minHeight="0.0" minWidth="0.0">
          <children>
-            <Pane opacity="0.8" prefHeight="480.0" prefWidth="640.0" style="-fx-background-color: F9F2DE; -fx-background-radius: 6px;" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+            <Pane opacity="0.8" prefHeight="480.0" prefWidth="640.0" style="-fx-background-color: #F9F2DE; -fx-background-radius: 6px;" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                <children>
                   <HBox>
                      <children>
