--- a/src/com/github/view/driver.fxml
+++ b/src/com/github/view/driver.fxml
@@ -11,17 +11,17 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.Driver">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-image: url(/resources/img/LoadingBackground.png)" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.Driver">
         <TabPane prefHeight="500.0" prefWidth="760.0" tabClosingPolicy="UNAVAILABLE">
             <tabs>
                 <Tab style="-fx-background-radius: 20;" text="Update status">
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="333.0" prefWidth="241.0">
                             <children>
-                     <Pane opacity="0.85" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #fff; -fx-background-radius: 6px;" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+                     <Pane opacity="0.8" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: F9F2DE; -fx-background-radius: 6px;" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                         <children>
                                       <Label fx:id="driverStatus" layoutX="17.0" layoutY="21.0" prefHeight="139.0" prefWidth="708.0" />
-                           <Pane layoutX="271.0" layoutY="238.0" prefHeight="177.0" prefWidth="200.0" style="-fx-background-radius: 2px; -fx-border-radius: 15; -fx-border-color: #ccc;">
+                           <Pane layoutX="271.0" layoutY="238.0" opacity="0.8" prefHeight="177.0" prefWidth="200.0" style="-fx-background-radius: 2px; -fx-border-radius: 15; -fx-border-color: #ccc;">
                               <children>
                                             <JFXComboBox fx:id="comboLate" focusColor="#641c24" labelFloat="true" layoutX="26.0" layoutY="38.0" prefWidth="150.0" promptText="Length" unFocusColor="#641c24" />
                                     <JFXTextField fx:id="delayMessage" focusColor="#641c24" labelFloat="true" layoutX="27.0" layoutY="89.0" prefHeight="34.0" prefWidth="149.0" promptText="Reason" unFocusColor="#641c24" />
