--- a/src/com/github/view/taxiDriver.fxml
+++ b/src/com/github/view/taxiDriver.fxml
@@ -10,21 +10,21 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.TaxiDriver">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url(/resources/img/LoadingBackground.png)" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.TaxiDriver">
       <TabPane prefHeight="501.0" prefWidth="762.0" tabClosingPolicy="UNAVAILABLE">
          <tabs>
             <Tab style="-fx-background-radius: 20;" text="Update status">
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="333.0" prefWidth="241.0">
                      <children>
-                     <Pane opacity="0.85" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #fff; -fx-background-radius: 6px;" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+                     <Pane opacity="0.8" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #F9F2DE; -fx-background-radius: 6px;" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                         <children>
                               <Label fx:id="taxiStatus" layoutX="18.0" layoutY="31.0" prefHeight="101.0" prefWidth="708.0">
                                  <font>
                                     <Font size="32.0" />
                                  </font>
                               </Label>
-                           <Pane layoutX="286.0" layoutY="206.0" opacity="0.85" prefHeight="146.0" prefWidth="171.0" style="-fx-background-radius: 2px; -fx-border-color: #ccc; -fx-border-radius: 15;">
+                           <Pane layoutX="286.0" layoutY="206.0" opacity="0.8" prefHeight="146.0" prefWidth="171.0" style="-fx-background-radius: 2px; -fx-border-color: #ccc; -fx-border-radius: 15;">
                               <children>
                                     <JFXButton fx:id="confirmBtn" buttonType="RAISED" disable="true" layoutX="14.0" layoutY="100.0" mnemonicParsing="false" onAction="#saveTaxiAvailability" prefHeight="32.0" prefWidth="150.0" ripplerFill="white" style="-fx-background-color: #641c24" text="Confirm" textFill="white" />
                                     <JFXComboBox fx:id="comboTaxi" focusColor="#641c24" labelFloat="true" layoutX="11.0" layoutY="28.0" prefWidth="150.0" promptText="I'm in" unFocusColor="#641c24" />
@@ -32,7 +32,7 @@
                                     <Label layoutX="14.0" layoutY="68.0" prefHeight="17.0" prefWidth="116.0" text="I'm availiable:" />
                               </children>
                            </Pane>
-                           <Pane layoutX="286.0" layoutY="359.0" opacity="0.85" prefHeight="69.0" prefWidth="171.0" style="-fx-border-color: #ccc; -fx-background-radius: 2px; -fx-border-radius: 15;">
+                           <Pane layoutX="286.0" layoutY="359.0" opacity="0.8" prefHeight="69.0" prefWidth="171.0" style="-fx-border-color: #ccc; -fx-background-radius: 2px; -fx-border-radius: 15;">
                               <children>
                                     <JFXButton buttonType="RAISED" layoutX="11.0" layoutY="19.0" mnemonicParsing="false" onAction="#saveTaxiUnAvailability" prefHeight="32.0" prefWidth="150.0" ripplerFill="white" style="-fx-background-color: #641c24" text="I'm not available" textFill="white" />
                               </children>
