--- a/src/com/github/view/userScreen.fxml
+++ b/src/com/github/view/userScreen.fxml
@@ -32,7 +32,7 @@
                               <ScrollPane fx:id="searchResults" layoutX="211.0" layoutY="23.0" opacity="0.8" prefHeight="356.0" prefWidth="510.0" style="-fx-background-radius: 3px;" />
                               <!--<Label layoutX="28.0" layoutY="28.0"  prefHeight="17.0" prefWidth="71.0" text="From:" />-->
                               <!--<Label layoutX="28.0" layoutY="88.0"  prefHeight="17.0" prefWidth="71.0" text="To:" />-->
-                              <Label fx:id="cost" layoutX="211.0" layoutY="21.0" prefHeight="389.0" prefWidth="460.0" />
+                              <!--<Label fx:id="cost" layoutX="211.0" layoutY="21.0" prefHeight="389.0" prefWidth="460.0" />-->
                            <Pane layoutX="12.0" layoutY="208.0" opacity="0.8" prefHeight="169.0" prefWidth="175.0" style="-fx-border-color: #ccc; -fx-background-radius: 2px; -fx-border-radius: 15;">
                               <children>
                                     <JFXComboBox fx:id="comboTaxi" focusColor="#641c24" labelFloat="true" layoutX="25.0" layoutY="32.0" prefWidth="150.0" promptText="I'm in:" unFocusColor="#641c24" />
